--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,112 @@
 /* ========= google font ============ */
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 /* =========== common css ======= */
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-ul, ol{
+
+html,
+body {
+    scroll-behavior: unset !important;
+}
+
+ul,
+ol {
     list-style-type: none;
     padding: 0 !important;
     margin-bottom: 0 !important;
 }
-h1,h2,h3,h4,h5,h6,p{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     line-height: 0.8;
 }
-h1,h2,h3,h4,h5,h6{
-   color: var(--fontHC);
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--fontHC);
 }
-p{
+
+p {
     color: var(--praColor);
     margin-bottom: 0;
 }
-a{
+
+a {
     text-decoration: none;
 }
-:root{
-    --primaryC:#009e66;
+
+:root {
+    --primaryC: #009e66;
     --fontHC: #F0F0F0;
     --praColor: #9F9F9F;
     --bg: #101011;
 }
+
 /* ============= navbar section start ============= */
-.navbar{
+#navbar {
     /* background: rgba(0, 0, 0, 0.322); */
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.2);
+    z-index: 99999 !important;
 }
-.navbar-brand{
+
+.navbar-toggler-icon {
+    background-image: url(../images/bars.svg);
+
+}
+
+.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0px;
+    box-shadow: 0 0 5px #fff;
+}
+
+.navbar-brand {
     color: var(--primaryC);
     font-size: 30px;
     font-weight: 700;
     font-style: italic;
     letter-spacing: 2px;
 }
-.navbar-brand:hover, .navbar-brand:focus{
+
+.navbar-brand:hover,
+.navbar-brand:focus {
     color: var(--primaryC) !important;
     opacity: 0.7 !important;
 }
-.nav-link{
+
+.nav-link {
     color: #fff;
     font-size: 15px;
     font-weight: 500;
     text-transform: capitalize;
 }
-.nav-link:hover, .nav-link:focus{
+
+.nav-link:hover,
+.nav-link:focus {
     color: #fff;
     opacity: 0.8;
 }
+
 /* ================ navbar section end ============== */
-#banner{
-    background:  linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/bg.jpg);
+#banner {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,23 +116,27 @@ a{
     justify-content: center;
     align-items: center;
 }
-#banner .container{
+
+#banner .container {
     position: relative;
 }
-.banner__main__heading{
+
+.banner__main__heading {
     font-size: 70px;
     color: #fff;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: capitalize;
 }
-.banner__sub__heading{
+
+.banner__sub__heading {
     font-size: 30px;
     color: #fff;
     font-weight: 400;
     letter-spacing: 0.3px;
 }
-.banner__icons{
+
+.banner__icons {
     position: absolute;
     bottom: 0;
     transform: translateY(50%);
@@ -100,49 +146,59 @@ a{
     -ms-transform: translateY(50%);
     -o-transform: translateY(50%);
 }
-.banner__link__items{
+
+.banner__link__items {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-.banner__link{
+
+.banner__link {
     font-size: 25px;
     color: #fff;
 }
-.banner__link:hover{
+
+.banner__link:hover {
     opacity: 0.7;
 }
+
 /* ============= banner section start ============= */
 
 /* ================ about section end ============== */
-#about{
+#about {
     background: var(--bg);
 }
-.common__headin__title{
+
+.common__headin__title {
     font-size: 15px;
     color: var(--praColor);
 }
-.common__heding__head{
+
+.common__heding__head {
     font-size: 46px;
     text-transform: capitalize;
     font-weight: 700;
     letter-spacing: -0.25;
 }
-.about__who{
+
+.about__who {
     font-size: 24px;
     font-weight: 500;
     color: var(--primaryC);
 }
-.about__who__details{
-font-size: 30px;
-font-weight: 700;
-line-height: 1.6;
+
+.about__who__details {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.6;
 }
+
 .about__icon {
     margin-left: 60px;
     position: relative;
 }
-.about__icon:after{
+
+.about__icon:after {
     content: "";
     position: absolute;
     left: -85px;
@@ -152,76 +208,88 @@ line-height: 1.6;
     width: 60px;
     background: var(--praColor);
 }
-.about__details{
+
+.about__details {
     font-size: 15px;
-    border-bottom: 2px solid rgba(255,255,255,.08);
+    border-bottom: 2px solid rgba(255, 255, 255, .08);
     font-weight: 400;
     line-height: 1.95;
 }
-.about__contact h5{
+
+.about__contact h5 {
     display: inline-block;
     font-size: 15px;
     margin-right: 5px;
 }
-.about__contact span{
+
+.about__contact span {
     font-size: 15px;
     color: var(--praColor);
 }
 
-.cv__link{
+.cv__link {
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
     padding: 10px 35px;
     border-radius: 30px;
     font-size: 14px;
-    background-color: #009e66!important;
-    border: 1px solid #009e66!important;
+    background-color: #009e66 !important;
+    border: 1px solid #009e66 !important;
     color: #fff;
 }
 
-.cv__link:hover, .cv__link:focus{
+.cv__link:hover,
+.cv__link:focus {
     opacity: 0.7;
 }
-.about__card{
+
+.about__card {
     background-color: #161616;
     border-bottom: 2px solid transparent;
-    box-shadow: 0 6px 16px rgba(0,0,0,.2);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, .2);
     padding: 38px 42px;
     transition: all .15s ease-in-out;
 }
-.card__logo{
+
+.card__logo {
     color: var(--primaryC);
     font-size: 50px;
     margin-bottom: 10px;
 }
+
 .card__heading {
     font-size: 20px;
     font-weight: 500;
     letter-spacing: -.5px;
     margin-bottom: 14px;
 }
+
 .card__para {
     font-size: 14px;
     font-weight: 400;
-   line-height: 1.95;
+    line-height: 1.95;
 }
-.testi__img{
+
+.testi__img {
     height: 60px;
     width: 60px;
     border-radius: 50%;
 }
-.testi__img img{
+
+.testi__img img {
     height: 100%;
     width: 100%;
     border-radius: 50%;
 }
-.testi__card{
+
+.testi__card {
     background-color: #161616;
     padding: 48px 40px;
     position: relative;
 }
-.testi__card::after{
+
+.testi__card::after {
     content: '\f10e';
     position: absolute;
     right: 40px;
@@ -230,65 +298,74 @@ line-height: 1.6;
     font-size: 50px;
     font-family: FontAwesome;
 }
-.testi__detail{
+
+.testi__detail {
     display: flex;
     align-items: center;
     column-gap: 15px;
     margin-bottom: 20px;
 }
-.testi__name{
+
+.testi__name {
     color: #efefef;
     font-size: 15px;
     font-weight: 400;
     margin-bottom: 10px;
 }
 
-.testi__title{
+.testi__title {
     color: #888;
     font-size: 14px;
     font-weight: 400;
 }
 
-.testi__para{
+.testi__para {
     color: #9f9f9f;
     font-size: 14px;
     font-weight: 400;
-    line-height: 1.95;  
+    line-height: 1.95;
 }
-.plan__card{
+
+.plan__card {
     background-color: #161616;
-    box-shadow: 0 0 20px 0 rgba(0,0,0,.05);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, .05);
     padding: 50px 0;
     text-align: center;
 }
-.plan__logo{
+
+.plan__logo {
     font-size: 50px;
     color: var(--primaryC);
     margin-bottom: 20px;
 }
-.plan__heading{
+
+.plan__heading {
     font-size: 26px;
     font-weight: 700;
     margin-bottom: 20px;
 }
+
 .plan__price {
     font-size: 24px;
     font-weight: 300;
     margin-bottom: 22px;
 }
-.plan__list{
+
+.plan__list {
     margin-bottom: 20px !important;
 }
+
 .plan__list__text {
     color: #9f9f9f;
     font-size: 14px;
     font-weight: 400;
     line-height: 2.5;
 }
+
 /* ============= about section start ============= */
 
 /* ================ resume section end ============== */
-#resume{
+#resume {
     background: var(--bg);
 }
 
@@ -298,7 +375,8 @@ line-height: 1.6;
     padding: 32px 48px;
     position: relative;
 }
-.resume__card::after{
+
+.resume__card::after {
     content: "";
     position: absolute;
     height: 16px;
@@ -308,26 +386,31 @@ line-height: 1.6;
     background: var(--primaryC);
     border-radius: 0 10px 10px 0;
 }
+
 .resume__heding__head {
     font-size: 26px;
     margin-bottom: 20px;
     font-weight: 500;
 }
-.resume__card__details{
-font-size: 14px;
-line-height: 1.95;
-font-weight: 400;
-margin-bottom: 10px;
+
+.resume__card__details {
+    font-size: 14px;
+    line-height: 1.95;
+    font-weight: 400;
+    margin-bottom: 10px;
 }
-.resume__description{
-font-size: 14px;
-line-height: 1.95;
-font-weight: 400;
+
+.resume__description {
+    font-size: 14px;
+    line-height: 1.95;
+    font-weight: 400;
 }
+
 .resume__items:not(:last-child) {
     border-bottom: 1px solid #313131;
 }
-.skill__main{
+
+.skill__main {
     background: var(--praColor);
     height: 14px;
     width: 100%;
@@ -335,13 +418,15 @@ font-weight: 400;
     border-radius: 3px;
     /* margin-bottom: 40px; */
 }
-.skill__bg{
+
+.skill__bg {
     background: var(--primaryC);
     height: 100%;
     width: 90%;
     border-radius: 3px;
 }
-.skill__text{
+
+.skill__text {
     position: absolute;
     top: -20px;
     left: 5px;
@@ -349,42 +434,50 @@ font-weight: 400;
     justify-content: space-between;
     width: 95%;
 }
-.skill__text p{
+
+.skill__text p {
     color: #fff;
     font-size: 14px;
     font-weight: 400;
 }
+
 .vskill__footer__heading {
     font-size: 31px;
     font-weight: 600;
     line-height: 1.5;
     margin-bottom: 13px;
 }
+
 .skill__footer__para {
     font-size: 16px;
     line-height: 2;
     color: var(--praColor);
     font-weight: 400;
 }
+
 /* ============= resume section start ============= */
 
 /* ================ portfolio" section end ============== */
-#portfolio{
+#portfolio {
     background: var(--bg);
 }
-.list__btn{
+
+.list__btn {
     cursor: pointer;
 }
-.portfolio__img{
+
+.portfolio__img {
     position: relative;
     height: 250px;
 }
-.portfolio__img img{
+
+.portfolio__img img {
     height: 100%;
     object-fit: cover;
 }
-.portfolio__overly{
-    background: rgba(0,0,0,0.7);
+
+.portfolio__overly {
+    background: rgba(0, 0, 0, 0.7);
     position: absolute;
     left: 0;
     top: 0;
@@ -402,13 +495,15 @@ font-weight: 400;
     -ms-transition: all linear 0.3s;
     -o-transition: all linear 0.3s;
 }
-.portfolio__img:hover .portfolio__overly{
+
+.portfolio__img:hover .portfolio__overly {
     width: 100%;
     height: 100%;
     visibility: visible;
     opacity: 1;
 }
-.portfolio__link{
+
+.portfolio__link {
     background: rgba(0, 158, 103, 0.9);
     color: #fff;
     padding: 8px 15px;
@@ -421,112 +516,135 @@ font-weight: 400;
     font-size: 14px;
     font-weight: 400;
 }
-.portfolio__link:hover, .portfolio__link:focus{
+
+.portfolio__link:hover,
+.portfolio__link:focus {
     opacity: 1;
 }
+
 /* ============= portfolio" section start ============= */
 
 /* ================ blog section end ============== */
-#blog{
+#blog {
     background: var(--bg);
 }
-.blog__img{
+
+.blog__img {
     position: relative;
 }
-.blog__date{
+
+.blog__date {
     position: absolute;
     left: 0;
     bottom: 0;
     background: var(--primaryC);
     padding: 10px 15px;
 }
-.blog__date h6{
-  margin-bottom: 0;
+
+.blog__date h6 {
+    margin-bottom: 0;
 }
+
 .blog__link {
     font-size: 20px;
     font-weight: 600;
     letter-spacing: .1px;
     color: #fff;
 }
+
 .blog__para {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
 }
+
 /* ============= blog section start ============= */
 
 /* ================ contact section end ============== */
-#contact{
+#contact {
     background: var(--bg);
 }
-.form input, textarea{
+
+.form input,
+textarea {
     border: none !important;
 }
-textarea:focus, 
-textarea.form-control:focus, 
-input.form-control:focus, 
-input[type=text]:focus, 
-input[type=password]:focus, 
-input[type=email]:focus, 
-input[type=number]:focus, 
-[type=text].form-control:focus, 
-[type=password].form-control:focus, 
-[type=email].form-control:focus, 
-[type=tel].form-control:focus, 
+
+textarea:focus,
+textarea.form-control:focus,
+input.form-control:focus,
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus,
+input[type=number]:focus,
+[type=text].form-control:focus,
+[type=password].form-control:focus,
+[type=email].form-control:focus,
+[type=tel].form-control:focus,
 [contenteditable].form-control:focus {
-  box-shadow: inset 0 -1px 0 var(--primaryC);
+    box-shadow: inset 0 -1px 0 var(--primaryC);
 }
-.form input, textarea{
+
+.form input,
+textarea {
     background: #161616 !important;
 }
-.form input::placeholder, textarea::placeholder{
+
+.form input::placeholder,
+textarea::placeholder {
     color: #777 !important;
 }
-.form__btn{
- outline: none;
- border: none;
- padding: 10px 15px;
- border-radius: 20px;
- -webkit-border-radius: 20px;
- -moz-border-radius: 20px;
- -ms-border-radius: 20px;
- -o-border-radius: 20px;
- background: var(--primaryC);
- color: #fff;
- transition: all linear 0.3s;
- -webkit-transition: all linear 0.3s;
- -moz-transition: all linear 0.3s;
- -ms-transition: all linear 0.3s;
- -o-transition: all linear 0.3s;
+
+.form__btn {
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    background: var(--primaryC);
+    color: #fff;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
-.form__btn:hover{
+
+.form__btn:hover {
     opacity: 0.8;
 }
+
 .form__heading {
     font-size: 20px;
     line-height: 1.5;
     font-weight: 500;
 }
-.form__para{
+
+.form__para {
     font-size: 14px;
     line-height: 1.95;
     font-weight: 400;
 }
 
-.info__detail{
-    border-left: 2px solid rgba(255,255,255,.15);
+.info__detail {
+    border-left: 2px solid rgba(255, 255, 255, .15);
     padding: 12px 0 12px 22px;
     border-left: 1px solid var(--primaryC);
 
 }
-.info__logo{
+
+.info__logo {
     font-size: 30px;
     color: var(--primaryC);
 }
-.info__name{
+
+.info__name {
     margin-bottom: 15px;
 }
+
 /* ============= contact section start ============= */
 
 /* ================ banner section end ============== */
@@ -542,4 +660,3 @@ input[type=number]:focus,
 /* ============= banner section start ============= */
 
 /* ================ banner section end ============== */
-
