--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html,
-body {
-    scroll-behavior: unset !important;
-}
-
 ul,
 ol {
     list-style-type: none;
@@ -48,7 +43,6 @@ p {
 a {
     text-decoration: none;
 }
-
 :root {
     --primaryC: #009e66;
     --fontHC: #F0F0F0;
@@ -63,7 +57,7 @@ a {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 99999 !important;
+    z-index: 100;
 }
 
 .navbar-toggler-icon {
@@ -98,8 +92,8 @@ a {
     text-transform: capitalize;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav-item .nav-link:hover,
+.nav-item .nav-link:focus {
     color: #fff;
     opacity: 0.8;
 }
@@ -115,6 +109,11 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
 }
 
 #banner .container {
@@ -165,10 +164,50 @@ a {
 /* ============= banner section start ============= */
 
 /* ================ about section end ============== */
-#about {
+#about,
+#resume,
+#portfolio,
+#blog,
+#contact {
     background: var(--bg);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: -9999;
 }
 
+#about.about__top,
+#resume.resume__top,
+#portfolio.portfolio__top,
+#blog.blog__top,
+#contact.contact__top {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    opacity: 1;
+    overflow-y: scroll;
+}
+
+.close__btn {
+    display: inline-block;
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    color: #fff;
+    font-size: 35px;
+    font-style: italic;
+    cursor: pointer;
+    z-index: 100;
+}
+#about{
+    overflow-x: hidden;
+}
 .common__headin__title {
     font-size: 15px;
     color: var(--praColor);
@@ -179,6 +218,19 @@ a {
     text-transform: capitalize;
     font-weight: 700;
     letter-spacing: -0.25;
+    position: relative;
+}
+
+.underline::after {
+    content: "";
+    position: absolute;
+    bottom: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    width: 70px;
+    background: var(--primaryC);
+
 }
 
 .about__who {
@@ -287,6 +339,7 @@ a {
     background-color: #161616;
     padding: 48px 40px;
     position: relative;
+    margin: 0 15px;
 }
 
 .testi__card::after {
@@ -353,6 +406,7 @@ a {
 
 .plan__list {
     margin-bottom: 20px !important;
+    overflow-x: hidden !important;
 }
 
 .plan__list__text {
@@ -360,6 +414,39 @@ a {
     font-size: 14px;
     font-weight: 400;
     line-height: 2.5;
+}
+
+.testi__dots {
+    display: flex;
+    justify-content: center;
+    width: 100% !important;
+    margin-top: 25px;
+}
+
+.slick__slider {
+    overflow-x: hidden !important;
+}
+
+.slick-list {
+    padding: 0 !important;
+}
+
+.slick-dots {
+    display: flex !important;
+    gap: 10px !important;
+    align-items: center;
+}
+
+.slick-dots button {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    text-indent: 1000px;
+    border: none;
+}
+
+.slick-active button {
+    background: var(--primaryC);
 }
 
 /* ============= about section start ============= */
