--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,19 @@ a {
 
 .navbar-toggler-icon {
     background-image: url(../images/bars.svg);
-
+    transition: all linear 0.5s;
 }
-
+.navbar-toggler-icon.navbar_close {
+    background-image: url(../images/xmark-solid.svg);
+}
+.navbar__hide{
+    opacity: 0;
+    visibility: hidden;
+}
 .navbar-toggler:focus {
     text-decoration: none;
     outline: 0px;
-    box-shadow: 0 0 5px #fff;
+    box-shadow: none;
 }
 
 .navbar-brand {
@@ -172,7 +178,7 @@ a {
 #contact {
     background: var(--bg);
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 0;
@@ -189,7 +195,7 @@ a {
     position: fixed;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 9999;
     opacity: 1;
@@ -420,6 +426,7 @@ a {
     font-size: 24px;
     font-weight: 300;
     margin-bottom: 22px;
+    line-height: 1.2;
 }
 
 .plan__list {
@@ -798,17 +805,3 @@ textarea::placeholder {
 }
 
 /* ============= contact section start ============= */
-
-/* ================ banner section end ============== */
-
-/* ============= banner section start ============= */
-
-/* ================ banner section end ============== */
-
-/* ============= banner section start ============= */
-
-/* ================ banner section end ============== */
-
-/* ============= banner section start ============= */
-
-/* ================ banner section end ============== */
