add form validation and change logo

--- a/css/style.css
+++ b/css/style.css
@@ -803,5 +803,9 @@ textarea::placeholder {
 .info__name {
     margin-bottom: 15px;
 }
-
+.error__msg{
+    padding:10px 0 0 15px;
+    color: #009e66;
+    color: #161616;
+}
 /* ============= contact section start ============= */
