try to fixed mobile scrolling problem

--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,9 @@ a {
     z-index: -9999;
     transition: all linear 0.5s;
     background: url(../images/svgbg.svg) !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding-top: 100px;
 }
 
