remove particle and add svg bg in banner

--- a/css/style.css
+++ b/css/style.css
@@ -262,59 +262,8 @@ a {
 }
 
 /* ================ navbar section end ============== */
-
-/* ---- particles.js container ---- */
-#particles-js {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #161616;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-}
-
-/* ---- stats.js ---- */
-.count-particles {
-    background: #000022;
-    position: fixed;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13e8e9;
-    font-size: 0.8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-}
-
-.js-count-particles {
-    font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-
-#stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-}
-
-.count-particles {
-    border-radius: 0 0 3px 3px;
-}
-
 #banner {
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../images/bgCopy.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/svgbg.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -384,11 +333,6 @@ a {
 #blog,
 #contact {
     background: var(--bg);
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #101011,#434343) !important;
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #101011,#434343) !important;
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     position: fixed;
     top: 0;
     left: 0;
